--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header>
-    <a href="#" class="logo"> COC-STATS</a>
+    <a href="#" class="logo"> Portfolio </a>
     <ul class="navlist">
       <li> <a href="#">Home</a></li>
       <li> <a href="#">About</a></li>
@@ -34,10 +34,10 @@
   <section class="hero">
     <div class="hero-text">
       <h5> Web developer Full stack</h5>
-      <h4> Lead supercell</h4>
-      <h1> GOBLINS</h1>
-      <p> Se junte com milhares de jogadores com seu cla, e compete na epica guerra dos clans</p>
-      <a href="https://github.com/LucasProgramaDor123">Compare</a>
+      <h4> Apaixonado em aprender e em programar</h4>
+      <h1> Lucas</h1>
+      <p> Especializado em Html, css, javascript e python</p>
+      <a href="https://github.com/LucasProgramaDor123">Evolução</a>
       <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?kw=the+complete&src=sac" class="ctaa"><i class="ri-play-line">Bootcamp</i></a>
     </div>
 
